src/objects/Legislator_Vote__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Title__c</fullName>
        <formula>Roll_Vote__r.Legislation__r.Bill_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_Session__c</fullName>
        <description>Congressional Session to which the bill belongs.  Set via workflow since it&apos;s used in a roll-up summary on Contact.  Won&apos;t be updated if the session is changed on the Legislation record after the Leg Vote record is created.</description>
        <inlineHelpText>Congressional Session to which the bill belongs.</inlineHelpText>
        <label>Congressional Session</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAVA_Vote_Score__c</fullName>
        <description>1 point if vote is Yea and IAVA Position is &quot;Support&quot;, or if vote is Nay and IAVA Position is &quot;Oppose&quot;.  Updated by workflow rule.</description>
        <inlineHelpText>1 point if vote is Yea and IAVA Position is &quot;Support&quot;, or if vote is Nay and IAVA Position is &quot;Oppose&quot;.  Updated by workflow rule.  May not update is IAVA Position is changed after the vote.</inlineHelpText>
        <label>IAVA Vote Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegVoteId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>concatenation of bioguide and roll id</inlineHelpText>
        <label>LegVoteId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legislator__c</fullName>
        <label>Legislator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislator Votes</relationshipLabel>
        <relationshipName>Legislator_Votes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Roll_Vote__c</fullName>
        <label>Roll Vote</label>
        <referenceTo>Roll_Vote__c</referenceTo>
        <relationshipLabel>Legislator Votes</relationshipLabel>
        <relationshipName>Legislator_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score_This_Vote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Score This Vote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vote_Type__c</fullName>
        <description>Vote type from the Roll Vote record, updated via workflow since it&apos;s used in a roll-up summary field on Contact</description>
        <label>Vote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <label>Vote</label>
        <picklist>
            <picklistValues>
                <fullName>Yea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Voting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Legislator Vote</label>
    <nameField>
        <displayFormat>LegVote-{00000}</displayFormat>
        <label>Legislator Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legislator Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>